public abstract class RemoteDatabaseManager {

}
