package mainpackage;
import java.util.Date ; 

public class Message {
	Date time ; 
	String content ; 
	
	public Message(Date time, String content) {
		this.time = time ; 
		this.content = content ; 
	}
}
