@startuml class
abstract class main {
    -boolean isUsernameValid(String name)
    -void main()
}

abstract class UIManager {
    +void openUI()
    +void inputDialogBox(string Login)
    +void openChattingSession(userID User)
    +void closeChattingSession(userID User)
    +void addMessage(message Message)
    +void addHistory(message[] Messages)
}

abstract class DistributedDataManager {
    +UserList getConnectedUserList()
    +void notifyUsers()
    +void notifyNewName(userID User,string Login)
}

abstract class  RemoteDatabaseManager{
    +message[] retrieveHistory(userID User)
    +void updateHistory(userID User, message Message)
}

class ChattingSession{
    -Date getTime()
    -void sendMessage(message Message)
    -Message receiveMessage()
}

class Message{
    time : Date
    content : String
}

class UserList{
    map : Map<userID, String> 
}

class userID{
    ID : int
} 


RemoteDatabaseManager "1" <-- main
DistributedDataManager "1" <- main
UIManager "1" <- main
ChattingSession "0..*" <-- main
UIManager <- ChattingSession
UserList -> "0..*" userID
main --> userID
ChattingSession -> userID
main --> UserList
ChattingSession -> UserList
ChattingSession -> Message
main -> Message

@enduml